lib/src/generated/grammar/TralhaParser.dart
// Generated from Tralha.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'TralhaListener.dart';
import 'TralhaBaseListener.dart';
import 'TralhaVisitor.dart';
import 'TralhaBaseVisitor.dart';
const int RULE_program = 0, RULE_importDeclaration = 1, RULE_qualifiedName = 2, 
          RULE_classDeclaration = 3, RULE_extendsClause = 4, RULE_implementsClause = 5, 
          RULE_memberDeclaration = 6, RULE_fieldDeclaration = 7, RULE_methodDeclaration = 8, 
          RULE_constructorDeclaration = 9, RULE_modifier = 10, RULE_parameterList = 11, 
          RULE_parameter = 12, RULE_block = 13, RULE_statement = 14, RULE_variableDeclaration = 15, 
          RULE_assignment = 16, RULE_assignable = 17, RULE_memberAccess = 18, 
          RULE_methodCall = 19, RULE_argumentList = 20, RULE_ifStatement = 21, 
          RULE_switchStatement = 22, RULE_switchCase = 23, RULE_defaultCase = 24, 
          RULE_whileStatement = 25, RULE_doWhileStatement = 26, RULE_forStatement = 27, 
          RULE_forEachStatement = 28, RULE_tryStatement = 29, RULE_printStatement = 30, 
          RULE_expression = 31, RULE_atom = 32, RULE_arrayLiteral = 33, 
          RULE_literal = 34, RULE_type = 35, RULE_baseType = 36;
class TralhaParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.2', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_IMPORT = 1, TOKEN_CLASS = 2, TOKEN_EXTENDS = 3, 
                   TOKEN_IMPLEMENTS = 4, TOKEN_ASSIGN = 5, TOKEN_PUBLIC = 6, 
                   TOKEN_PRIVATE = 7, TOKEN_PROTECTED = 8, TOKEN_STATIC = 9, 
                   TOKEN_FINAL = 10, TOKEN_CONST = 11, TOKEN_ABSTRACT = 12, 
                   TOKEN_OVERRIDE = 13, TOKEN_BREAK = 14, TOKEN_CONTINUE = 15, 
                   TOKEN_RETURN = 16, TOKEN_THROW = 17, TOKEN_THIS = 18, 
                   TOKEN_NULL_REF = 19, TOKEN_IF = 20, TOKEN_ELSE = 21, 
                   TOKEN_SWITCH = 22, TOKEN_CASE = 23, TOKEN_DEFAULT = 24, 
                   TOKEN_WHILE = 25, TOKEN_DO = 26, TOKEN_FOR = 27, TOKEN_IN = 28, 
                   TOKEN_TRY = 29, TOKEN_CATCH = 30, TOKEN_FINALLY = 31, 
                   TOKEN_PRINT = 32, TOKEN_NEW = 33, TOKEN_TRUE = 34, TOKEN_FALSE = 35, 
                   TOKEN_NULL = 36, TOKEN_INT_TYPE = 37, TOKEN_FLOAT_TYPE = 38, 
                   TOKEN_DOUBLE_TYPE = 39, TOKEN_CHAR_TYPE = 40, TOKEN_BOOL_TYPE = 41, 
                   TOKEN_STRING_TYPE = 42, TOKEN_VOID_TYPE = 43, TOKEN_VAR_TYPE = 44, 
                   TOKEN_DYNAMIC_TYPE = 45, TOKEN_OR = 46, TOKEN_AND = 47, 
                   TOKEN_EQ = 48, TOKEN_NEQ = 49, TOKEN_LE = 50, TOKEN_GE = 51, 
                   TOKEN_LT = 52, TOKEN_GT = 53, TOKEN_INC = 54, TOKEN_DEC = 55, 
                   TOKEN_PLUS = 56, TOKEN_MINUS = 57, TOKEN_STAR = 58, TOKEN_SLASH = 59, 
                   TOKEN_PERCENT = 60, TOKEN_NOT = 61, TOKEN_SEMI = 62, 
                   TOKEN_COMMA = 63, TOKEN_DOT = 64, TOKEN_COLON = 65, TOKEN_LPAREN = 66, 
                   TOKEN_RPAREN = 67, TOKEN_LBRACE = 68, TOKEN_RBRACE = 69, 
                   TOKEN_LBRACK = 70, TOKEN_RBRACK = 71, TOKEN_FLOAT = 72, 
                   TOKEN_DOUBLE = 73, TOKEN_INT = 74, TOKEN_STRING = 75, 
                   TOKEN_CHAR = 76, TOKEN_ID = 77, TOKEN_BLOCK_COMMENT = 78, 
                   TOKEN_LINE_COMMENT = 79, TOKEN_WS = 80;

  @override
  final List<String> ruleNames = [
    'program', 'importDeclaration', 'qualifiedName', 'classDeclaration', 
    'extendsClause', 'implementsClause', 'memberDeclaration', 'fieldDeclaration', 
    'methodDeclaration', 'constructorDeclaration', 'modifier', 'parameterList', 
    'parameter', 'block', 'statement', 'variableDeclaration', 'assignment', 
    'assignable', 'memberAccess', 'methodCall', 'argumentList', 'ifStatement', 
    'switchStatement', 'switchCase', 'defaultCase', 'whileStatement', 'doWhileStatement', 
    'forStatement', 'forEachStatement', 'tryStatement', 'printStatement', 
    'expression', 'atom', 'arrayLiteral', 'literal', 'type', 'baseType'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'trazPraca'", "'TREM'", "'mamata'", "'bota'", "'receba'", "'todo'", 
      "'sou'", "'nepotismo'", "'baiano'", "'teimoso'", "'cravado'", "'politico'", 
      "'override'", "'chega'", "'pula'", "'manda'", "'taca'", "'nessaBomba'", 
      "'deuErro'", "'sePa'", "'ouSeDeusQuiser'", "'dependendo'", "'nesseCaso'", 
      "'naDuvida'", "'ateDarCerto'", "'vaiNaFe'", "'vaiVolta'", "'laEle'", 
      "'gambiarra'", "'deuPau'", "'fitaIsolante'", "'whatsapp'", "'meteUm'", 
      "'confia'", "'fakeNews'", "'oco'", "'naoFracionado'", "'fracionado'", 
      "'fracionadao'", "'letrinha'", "'bipolar'", "'testao'", "'rouba'", 
      "'mutante'", "'adivinha'", "'||'", "'&&'", "'=='", "'!='", "'<='", 
      "'>='", "'<'", "'>'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", 
      "'%'", "'!'", "';'", "','", "'.'", "':'", "'('", "')'", "'{'", "'}'", 
      "'['", "']'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "IMPORT", "CLASS", "EXTENDS", "IMPLEMENTS", "ASSIGN", "PUBLIC", 
      "PRIVATE", "PROTECTED", "STATIC", "FINAL", "CONST", "ABSTRACT", "OVERRIDE", 
      "BREAK", "CONTINUE", "RETURN", "THROW", "THIS", "NULL_REF", "IF", 
      "ELSE", "SWITCH", "CASE", "DEFAULT", "WHILE", "DO", "FOR", "IN", "TRY", 
      "CATCH", "FINALLY", "PRINT", "NEW", "TRUE", "FALSE", "NULL", "INT_TYPE", 
      "FLOAT_TYPE", "DOUBLE_TYPE", "CHAR_TYPE", "BOOL_TYPE", "STRING_TYPE", 
      "VOID_TYPE", "VAR_TYPE", "DYNAMIC_TYPE", "OR", "AND", "EQ", "NEQ", 
      "LE", "GE", "LT", "GT", "INC", "DEC", "PLUS", "MINUS", "STAR", "SLASH", 
      "PERCENT", "NOT", "SEMI", "COMMA", "DOT", "COLON", "LPAREN", "RPAREN", 
      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "FLOAT", "DOUBLE", "INT", 
      "STRING", "CHAR", "ID", "BLOCK_COMMENT", "LINE_COMMENT", "WS"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'Tralha.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  TralhaParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  ProgramContext program() {
    dynamic _localctx = ProgramContext(context, state);
    enterRule(_localctx, 0, RULE_program);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 79;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 54113431906680774) != 0) || _la == TOKEN_LBRACE || _la == TOKEN_ID) {
        state = 77;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_IMPORT:
          state = 74;
          importDeclaration();
          break;
        case TOKEN_CLASS:
        case TOKEN_PUBLIC:
        case TOKEN_PRIVATE:
        case TOKEN_PROTECTED:
        case TOKEN_STATIC:
        case TOKEN_FINAL:
        case TOKEN_CONST:
        case TOKEN_ABSTRACT:
        case TOKEN_OVERRIDE:
          state = 75;
          classDeclaration();
          break;
        case TOKEN_BREAK:
        case TOKEN_CONTINUE:
        case TOKEN_RETURN:
        case TOKEN_THROW:
        case TOKEN_THIS:
        case TOKEN_NULL_REF:
        case TOKEN_IF:
        case TOKEN_SWITCH:
        case TOKEN_WHILE:
        case TOKEN_DO:
        case TOKEN_FOR:
        case TOKEN_TRY:
        case TOKEN_PRINT:
        case TOKEN_INT_TYPE:
        case TOKEN_FLOAT_TYPE:
        case TOKEN_DOUBLE_TYPE:
        case TOKEN_CHAR_TYPE:
        case TOKEN_BOOL_TYPE:
        case TOKEN_STRING_TYPE:
        case TOKEN_VOID_TYPE:
        case TOKEN_VAR_TYPE:
        case TOKEN_DYNAMIC_TYPE:
        case TOKEN_INC:
        case TOKEN_DEC:
        case TOKEN_LBRACE:
        case TOKEN_ID:
          state = 76;
          statement();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 81;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 82;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportDeclarationContext importDeclaration() {
    dynamic _localctx = ImportDeclarationContext(context, state);
    enterRule(_localctx, 2, RULE_importDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 84;
      match(TOKEN_IMPORT);
      state = 85;
      qualifiedName();
      state = 87;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_SEMI) {
        state = 86;
        match(TOKEN_SEMI);
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  QualifiedNameContext qualifiedName() {
    dynamic _localctx = QualifiedNameContext(context, state);
    enterRule(_localctx, 4, RULE_qualifiedName);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 89;
      match(TOKEN_ID);
      state = 94;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_DOT) {
        state = 90;
        match(TOKEN_DOT);
        state = 91;
        match(TOKEN_ID);
        state = 96;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ClassDeclarationContext classDeclaration() {
    dynamic _localctx = ClassDeclarationContext(context, state);
    enterRule(_localctx, 6, RULE_classDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 100;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 16320) != 0)) {
        state = 97;
        modifier();
        state = 102;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 103;
      match(TOKEN_CLASS);
      state = 104;
      match(TOKEN_ID);
      state = 106;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_EXTENDS) {
        state = 105;
        extendsClause();
      }

      state = 109;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_IMPLEMENTS) {
        state = 108;
        implementsClause();
      }

      state = 111;
      match(TOKEN_LBRACE);
      state = 115;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 70231305240512) != 0) || _la == TOKEN_ID) {
        state = 112;
        memberDeclaration();
        state = 117;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 118;
      match(TOKEN_RBRACE);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExtendsClauseContext extendsClause() {
    dynamic _localctx = ExtendsClauseContext(context, state);
    enterRule(_localctx, 8, RULE_extendsClause);
    try {
      enterOuterAlt(_localctx, 1);
      state = 120;
      match(TOKEN_EXTENDS);
      state = 121;
      match(TOKEN_ID);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImplementsClauseContext implementsClause() {
    dynamic _localctx = ImplementsClauseContext(context, state);
    enterRule(_localctx, 10, RULE_implementsClause);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 123;
      match(TOKEN_IMPLEMENTS);
      state = 124;
      match(TOKEN_ID);
      state = 129;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_COMMA) {
        state = 125;
        match(TOKEN_COMMA);
        state = 126;
        match(TOKEN_ID);
        state = 131;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MemberDeclarationContext memberDeclaration() {
    dynamic _localctx = MemberDeclarationContext(context, state);
    enterRule(_localctx, 12, RULE_memberDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 135;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 16320) != 0)) {
        state = 132;
        modifier();
        state = 137;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 141;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 10, context)) {
      case 1:
        state = 138;
        methodDeclaration();
        break;
      case 2:
        state = 139;
        fieldDeclaration();
        break;
      case 3:
        state = 140;
        constructorDeclaration();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldDeclarationContext fieldDeclaration() {
    dynamic _localctx = FieldDeclarationContext(context, state);
    enterRule(_localctx, 14, RULE_fieldDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 143;
      type();
      state = 144;
      match(TOKEN_ID);
      state = 147;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_ASSIGN) {
        state = 145;
        match(TOKEN_ASSIGN);
        state = 146;
        expression(0);
      }

      state = 150;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_SEMI) {
        state = 149;
        match(TOKEN_SEMI);
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MethodDeclarationContext methodDeclaration() {
    dynamic _localctx = MethodDeclarationContext(context, state);
    enterRule(_localctx, 16, RULE_methodDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 153;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 13, context)) {
      case 1:
        state = 152;
        type();
        break;
      }
      state = 155;
      match(TOKEN_ID);
      state = 156;
      match(TOKEN_LPAREN);
      state = 158;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (((((_la - 37)) & ~0x3f) == 0 && ((1 << (_la - 37)) & 1099511628287) != 0)) {
        state = 157;
        parameterList();
      }

      state = 160;
      match(TOKEN_RPAREN);
      state = 165;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_LBRACE:
        state = 161;
        block();
        break;
      case TOKEN_PUBLIC:
      case TOKEN_PRIVATE:
      case TOKEN_PROTECTED:
      case TOKEN_STATIC:
      case TOKEN_FINAL:
      case TOKEN_CONST:
      case TOKEN_ABSTRACT:
      case TOKEN_OVERRIDE:
      case TOKEN_INT_TYPE:
      case TOKEN_FLOAT_TYPE:
      case TOKEN_DOUBLE_TYPE:
      case TOKEN_CHAR_TYPE:
      case TOKEN_BOOL_TYPE:
      case TOKEN_STRING_TYPE:
      case TOKEN_VOID_TYPE:
      case TOKEN_VAR_TYPE:
      case TOKEN_DYNAMIC_TYPE:
      case TOKEN_SEMI:
      case TOKEN_RBRACE:
      case TOKEN_ID:
        state = 163;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_SEMI) {
          state = 162;
          match(TOKEN_SEMI);
        }

        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ConstructorDeclarationContext constructorDeclaration() {
    dynamic _localctx = ConstructorDeclarationContext(context, state);
    enterRule(_localctx, 18, RULE_constructorDeclaration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 167;
      match(TOKEN_ID);
      state = 168;
      match(TOKEN_LPAREN);
      state = 170;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (((((_la - 37)) & ~0x3f) == 0 && ((1 << (_la - 37)) & 1099511628287) != 0)) {
        state = 169;
        parameterList();
      }

      state = 172;
      match(TOKEN_RPAREN);
      state = 173;
      block();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
